# ai-freelance-platform

./: .amp-batch-job  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_COMPARISON.md  BRANCH_PROTECTION_SETUP.md  CLAUDE.md  COMPLETION_SUMMARY_BATCH_3_ISSUES_7_13_26_27_28.md  COMPLETION_SUMMARY_ISSUES_29-33.md  COMPLETION_SUMMARY_ISSUES_36-40.md  COMPLETION_SUMMARY_ISSUES_41-45.md  DISTRIBUTED_TRACING_QUICK_START.md  Dockerfile.sandbox  EXHAUSTIVE_REVIEW_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_ISSUES_17-21.md  IMPLEMENTATION_SUMMARY_ALL_ISSUES.md  IMPLEMENTATION_SUMMARY_ISSUES_46-50.md  IMPLEMENTATION_SUMMARY_ISSUE_19.md  INTEGRATION_GUIDE_REDIS_LOCKS.md  ISSUES_21-25_IMPLEMENTATION_SUMMARY.md  ISSUES_31-40_COMPLETION_SUMMARY.md  ISSUES_36-40_COMPLETION_SUMMARY.md  ISSUE_17_COMPLETION_SUMMARY.txt  ISSUE_17_EXECUTION_REPORT.txt  ISSUE_17_FINAL_REPORT.md  ISSUE_17_QUICK_REFERENCE.md  ISSUE_17_SECURITY_IMPLEMENTATION.md  ISSUE_18_QUICK_REFERENCE.md  ISSUE_18_SECURITY_VALIDATION.md  ISSUE_19_COMPLETION_CHECKLIST.md  ISSUE_19_COMPLETION_SUMMARY.md  ISSUE_19_IMPLEMENTATION_SUMMARY.md  ISSUE_19_REDIS_DISTRIBUTED_LOCKING.md  ISSUE_19_SOLUTION_SUMMARY.txt  ISSUE_20_CLEANUP_SUMMARY.md  ISSUE_20_IMPLEMENTATION_SUMMARY.md  ISSUE_20_INDEX.md  ISSUE_20_MEMORY_LEAK_FIX.md  ISSUE_20_VERIFICATION_SUMMARY.md  (+72 more)
.agents/: DEPLOYMENT_STATUS.md  PULL_REQUEST_SUMMARY.md  SUBAGENT_TASK_ISSUE_8.md  deployment_log.txt  pr-config.yaml  subagent_issue_4.md  subagent_issue_5.md  subagent_issue_6.md  subagent_issue_8.md
.github/workflows/: ci.yml
data/: dpo_dataset.jsonl  marketplaces.json  tasks.db
docker/: otel-collector-config.yml  prometheus.yml
scripts/: cleanup_main_issue_branches.sh  cleanup_stale_branches.py  execute_issues_parallel.sh  setup-docker-repo.sh  setup-rocm-vllm.sh  start_dev.sh  train_local_model.py
src/: async_rag_service.py  background_job_queue.py  config.py  disaster_recovery.py  experience_vector_db.py  llm_health_check.py  llm_service.py
src/agent_execution/: __init__.py  arena.py  auto_threshold.py  bid_deduplication.py  bid_lock_manager.py  bid_lock_manager_factory.py  browser_pool.py  confidence_tracker.py  cost_tracker.py  docker_sandbox.py  errors.py  (+14 more)
tests/: __init__.py  conftest.py  reproduce_issue_34.py  test_analytics.py  test_api_endpoints.py  test_apm.py  test_arena_profitability.py  test_client_dashboard_auth.py  test_concurrent_bids.py  test_confidence_tracker.py  test_config.py  test_config_manager.py  test_cost_tracker.py  test_database_constraints.py  test_database_indexes_issue_38.py  test_delivery_security.py  test_disaster_recovery.py  test_distributed_bid_lock.py  test_distributed_tracing.py  test_error_categorization.py  test_error_scenarios.py  test_error_scenarios_issue_29.py  test_escalation_idempotency.py  test_escalation_workflow.py  test_file_upload_integration.py  test_file_upload_validation.py  test_fine_tuning.py  test_integration_workflows.py  test_intelligent_router.py  test_llm_circuit_breaker_integration.py  test_llm_health_check.py  test_marketplace_adapters.py  test_marketplace_dedup.py  test_marketplace_discovery.py  test_playwright_browser_cleanup_issue_21.py  test_playwright_cleanup_issue21.py  test_playwright_leaks.py  test_playwright_resource_cleanup.py  test_pricing.py  test_profit_calculator.py  (+13 more)
(+94 files in other folders)
