[project]
name = "arbitrage-ai"
version = "0.1.0"
description = "ArbitrageAI Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "stripe>=7.0.0",
    "openai>=1.0.0",
    "e2b-code-interpreter>=1.0.0",
    "python-dotenv>=1.0.0",
    # File parsing dependencies
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "PyPDF2>=3.0.0",
    "python-multipart>=0.0.6",
    # Experience Vector Database (RAG for Few-Shot Learning)
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    # Observability and Tracing
    "traceloop-sdk>=0.15.0",
    "arize-phoenix>=4.0.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    # APM and distributed tracing (Issue #42)
    "opentelemetry-exporter-prometheus>=0.45b0",
    "numpy>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=0.45b0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "opentelemetry-instrumentation-requests>=0.45b0",
    "prometheus-client>=0.19.0",
    # Docker Sandbox (replaces E2B for cost savings)
    "docker>=7.0.0",
    # Market Scanner (Playwright for web scraping)
    "playwright>=1.40.0",
    # Distributed Locking and Caching (Issue #19)
    "redis>=5.0.0",
    "croniter>=2.0.0",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
]

[project.scripts]
ft-cli = "fine_tuning.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [".agents/"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Suppress Pydantic v2 deprecation warnings from external dependencies (traceloop, etc)
    # These are from third-party libraries that haven't fully migrated to Pydantic v2
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
